Fixing links in dark mode

--- a/5.0/css/style.css
+++ b/5.0/css/style.css
@@ -226,6 +226,12 @@ textarea {
       background-color: #111;
       color: #fff;
   }
+
+  a {
+    color: #fff;
+    text-decoration: underline;
+   }
+
 }
 
 /* ==========================================================================
